fixed header spacing

--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,6 @@ body {
 h1 {
     font-family: 'Source Code Pro', 'Roboto Mono', SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     font-size: 36px;
-    letter-spacing: 2px;
     color: rgb(255, 30, 30);
 }
 p {
